--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,5 @@
 <h1>homepage</h1>
 
 <li><a href="/register">Sign Up</a></li>
+<li><a href="/login">Login</a></li>
+<li><a href="/logout">Logout</a></li>
