add css and bootstrap

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,5 @@
-<h1>homepage</h1>
+<%- include("./partials/header") %>
 
-<li><a href="/register">Sign Up</a></li>
-<li><a href="/login">Login</a></li>
-<li><a href="/logout">Logout</a></li>
+<h1 id="red">homepage</h1>
+
+<%- include("./partials/footer") %>
