--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,3 +1,5 @@
+<%- include("./partials/header") %>
+
 <h1>Sign Up Form</h1>
 
 <form action="/register" method="POST">
@@ -6,6 +8,4 @@
   <button>Submit</button>
 </form>
 
-<li><a href="/register">Sign Up</a></li>
-<li><a href="/login">Login</a></li>
-<li><a href="/logout">Logout</a></li>
+<%- include("./partials/footer") %>
