--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,3 +1,5 @@
+<%- include("./partials/header") %>
+
 <h1>login</h1>
 
 <form action="/login" method="POST">
@@ -6,6 +8,4 @@
   <button>Login</button>
 </form>
 
-<li><a href="/register">Sign Up</a></li>
-<li><a href="/login">Login</a></li>
-<li><a href="/logout">Logout</a></li>
+<%- include("./partials/footer") %>
