--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -1,5 +1,5 @@
+<%- include("./partials/header") %>
+
 <h1>secret</h1>
 
-<li><a href="/register">Sign Up</a></li>
-<li><a href="/login">Login</a></li>
-<li><a href="/logout">Logout</a></li>
+<%- include("./partials/footer") %>
