--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,7 @@
 <%- include("./partials/header") %>
 
-<h1 id="red">homepage</h1>
+<div class="container text-center">
+  <h1>Homepage</h1>
+</div>
 
 <%- include("./partials/footer") %>
