--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,11 +1,13 @@
 <%- include("./partials/header") %>
 
-<h1>Sign Up Form</h1>
+<div class="container text-center">
+  <h1>Sign Up Form</h1>
 
-<form action="/register" method="POST">
-  <input type="text" name="username" placeholder="username">
-  <input type="password" name="password" placeholder="password">
-  <button>Submit</button>
-</form>
+  <form action="/register" method="POST">
+    <input type="text" name="username" placeholder="username">
+    <input type="password" name="password" placeholder="password">
+    <button>Submit</button>
+  </form>
+</div>
 
 <%- include("./partials/footer") %>
