--- a/views/secret.ejs
+++ b/views/secret.ejs
@@ -1,5 +1,7 @@
 <%- include("./partials/header") %>
 
-<h1>secret</h1>
+<div class="container text-center">
+  <h1>Secret page</h1>
+</div>
 
 <%- include("./partials/footer") %>
